初版功能开发完成

--- a/src/style.css
+++ b/src/style.css
@@ -28,6 +28,7 @@ body {
   /*place-items: center;*/
   min-width: 320px;
   min-height: 100vh;
+  font-size: 14px;
 }
 
 h1 {
@@ -61,8 +62,11 @@ button:focus-visible {
 #app {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 1rem;
   width: 100%;
+}
+
+#main{
+  padding: 1rem;
 }
 
 @media (prefers-color-scheme: light) {
